# CMakeLists.txt

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(symx)

SET(CMAKE_BUILD_TYPE "Debug")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

INCLUDE_DIRECTORIES(include)
AUX_SOURCE_DIRECTORY(./src/nio SRCS_NIO)

ADD_LIBRARY(${PROJECT_NAME} SHARED ${SRCS_NIO})

INSTALL (TARGETS ${PROJECT_NAME}
         LIBRARY DESTINATION lib)

SET(CMAKE_INSTALL_PREFIX $ENV{OB_REL})
