# CMakeLists.txt

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(echosvr)

SET(CMAKE_BUILD_TYPE "Debug")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

INCLUDE_DIRECTORIES(../../lib/include)

LINK_DIRECTORIES( $ENV{OB_REL}/lib )

ADD_EXECUTABLE(${PROJECT_NAME} echo-server.cpp)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} symx)
