# CMakeLists.txt

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(srpc_server)
AUX_SOURCE_DIRECTORY(. SRCS)

SET(CMAKE_BUILD_TYPE "Debug")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

INCLUDE_DIRECTORIES(../../lib/include)

# LINK_DIRECTORIES只影响它后面声明的编译对象TARGET
LINK_DIRECTORIES( $ENV{OB_REL}/lib )
ADD_EXECUTABLE(${PROJECT_NAME} ${SRCS})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} symx)
